src/test/06-Errors/error-static-var-scope-1.txt
error-static-var-scope-1.ck:7:14: error: static variables must be declared at class scope
[7]         5 => static int X;
                 ^
error-static-var-scope-1.ck: ...in function 'void Foo.bar()'
